fix Total section mobile layout

--- a/src/style.scss
+++ b/src/style.scss
@@ -110,6 +110,10 @@ $enable-negative-margins: true;
   .badges-max-width-sm {
     max-height: 24px;
   }
+
+  .graph-width-sm {
+    width: 200px !important;
+  }
 }
 // adding custom colors to the theme
 
